2006-01-25  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_vector_2_list): Fixed segfaults in list->vector
	(type definitions): Made types' methods static 
	(vector_equal_p): Vector comparison
	(vector_write): Vector writer
	(dfsch_obj_write): Removed unused parts of code

	* New way of handling objects in memory 

2006-01-23  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Fixed various warnings about type safety and undefined
	functions

	* dfsch/dfsch.h: Fixed tzpos in argument proocessing macros

	* src/strings.c: New handling of strings is working

2006-01-22  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h: We should be able to create empty strings

2006-01-05  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h: Some basic idea of API.

	* src/strings.c dfsch/strings.h: Files for new implementation of
	string handling

2005-12-25  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_hash_unset): hash-unset acessible to scheme
	code 

	* src/hash.c (dfsch_hash_unset): Deleting keys and shrinking of 
	hash-tables

	* src/native.c: Promises avaiable as native functions
	(native_form_cons_stream): Streams avaiable as native functions
	(native_form_stream_*): Renamed to match SRFI 40 

	* dfsch/hash.h: Documentation update

	* src/promise.c: Promises

2005-12-20  Ales Hakl  <ales at hakl dot net>

	* src/object.h: Moved dfsch_object_t definition into separate
	reusable file 

2005-12-19  Ales Hakl  <ales at hakl dot net>

	* configure.ac: Bumped version number to 0.2.0-pre1

2005-12-18  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_call_ec): Escape continuations
	(native_raise, native_error, native_abort ...): Exception wrappers 

2005-12-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Removed checks for exception datatype

	* src/repl.c: Adapted for new exceptions.

	* src/dfsch.c (dfsch_raise): Escape continuations based exceptions
	(dfsch_try): Removed debug hooks
